# GridTraversal

./: CMakeLists.txt  LICENSE  README.md
include/: grid.h  misc.h  squareDecoder.h
src/: main.c
src/grid/: grid.c  squareDecoder.c
src/misc/: misc.c
